libs/config/tests/errors/ce9_duplicate_external/stdout.ansi
[0m[1m[38;5;9merror[CE9][0m[1m: class defined multiple times[0m
  [0m[36m┌─[0m source.hpp:2:11
  [0m[36m│[0m
[0m[36m2[0m [0m[36m│[0m     class [0m[31mBulletBase[0m;
  [0m[36m│[0m           [0m[31m^^^^^^^^^^[0m [0m[31mdefined multiple times[0m
[0m[36m3[0m [0m[36m│[0m     class BulletBase;
  [0m[36m│[0m           [0m[36m----------[0m [0m[36malso defined here[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: remove all but the first definition of `class BulletBase;`

